feat: icons болон chart package үүсгэсэн

--- a/apps/storefront/public/locales/ar/common.json
+++ b/apps/storefront/public/locales/ar/common.json
@@ -154,7 +154,7 @@
   "text-summer-collection": "مجموعة الصيف",
   "text-subscribe-now": "اشترك الآن",
   "text-newsletter-title": "واحصل على عرض على مجموعة جديدة",
-  "text-newsletter-subtitle": "اشترك في ChawkBazar لتلقي تحديثات حول الوافدين الجدد والعروض الخاصة وعروضنا الترويجية",
+  "text-newsletter-subtitle": "اشترك في Intelligo لتلقي تحديثات حول الوافدين الجدد والعروض الخاصة وعروضنا الترويجية",
   "text-collection-list": "قائمة المجموعات",
   "text-collections": "المجموعات ",
   "text-accept-cookies": "قبول ملفات تعريف الارتباط",
