--- a/apps/storefront/public/locales/de/common.json
+++ b/apps/storefront/public/locales/de/common.json
@@ -3,7 +3,7 @@
   "error-sub-heading": "Wir können die gesuchte Seite nicht finden",
   "support-heading": "Sprechen Sie mit einer realen Person",
   "support-sub-heading": "Bist du auf dem Zaun? Eine Frage haben? Benötigen Sie eine Empfehlung? Member Services ist immer für Sie da. Schick uns eine Nachricht.",
-  "app-heading": "Die ChawkBazar App",
+  "app-heading": "Die Intelligo App",
   "app-sub-heading": "<span> Teile Dein <strong>Ideen</strong> &amp; Endlos einkaufen <strong>Inspiration</strong> </span>",
   "collection-title-one": "Neue Frühlingsstrickwaren",
   "collection-description-one": "Endlos vielseitige neue Styles, die Ja zum Frühling sagen. Die Saison sieht gut aus.",
@@ -156,7 +156,7 @@
   "text-summer-collection": "Sommerkollektion",
   "text-subscribe-now": "Jetzt abonnieren",
   "text-newsletter-title": "Und Angebot für neue Kollektion erhalten",
-  "text-newsletter-subtitle": "Abonnieren Sie den ChawkBazar, um Updates zu Neuankömmlingen, Sonderangeboten und unseren Werbeaktionen zu erhalten",
+  "text-newsletter-subtitle": "Abonnieren Sie den Intelligo, um Updates zu Neuankömmlingen, Sonderangeboten und unseren Werbeaktionen zu erhalten",
   "text-collection-list": "Sammlungsliste",
   "text-collections": "Sammlungen ",
   "text-accept-cookies": "Cookies akzeptieren",
