--- a/apps/storefront/public/locales/en/common.json
+++ b/apps/storefront/public/locales/en/common.json
@@ -24,7 +24,7 @@
 	"CHAWKBAZAR_MESSAGE.SOMETHING_WENT_WRONG": "Something went wrong",
 	"CHAWKBAZAR_MESSAGE.TOKEN_IS_VALID": "Token is valid",
 	"add-to-cart": "Added to the cart",
-	"app-heading": "The ChawkBazar App",
+	"app-heading": "The Intelligo App",
 	"app-sub-heading": "<span> Share Your <strong>Ideas</strong> &amp; Shop Endless <strong>Inspiration</strong> </span>",
 	"breadcrumb-collection": "Collection",
 	"breadcrumb-home": "Home",
@@ -184,7 +184,7 @@
 	"text-new-arrivals": "New Arrivals",
 	"text-new-year": "New Year",
 	"text-newest": "Newest",
-	"text-newsletter-subtitle": "Do subscribe the ChawkBazar to receive updates on new arrivals, special offers & our promotions",
+	"text-newsletter-subtitle": "Do subscribe the Intelligo to receive updates on new arrivals, special offers & our promotions",
 	"text-newsletter-title": "And Get Offer On New Collection",
 	"text-no-account": "Don't have any account?",
 	"text-no-address": "No Address Found",
