--- a/apps/storefront/public/locales/es/common.json
+++ b/apps/storefront/public/locales/es/common.json
@@ -3,7 +3,7 @@
   "error-sub-heading": "No podemos encontrar la página que busca",
   "support-heading": "Hablale a una persona real",
   "support-sub-heading": "¿Estás en la valla? ¿Tengo una pregunta? ¿Necesitas una recomendación? Servicios para miembros siempre está aquí para ayudar. Mandanos un mensaje.",
-  "app-heading": "La aplicación ChawkBazar",
+  "app-heading": "La aplicación Intelligo",
   "app-sub-heading": "<span> Comparte tu <strong>Ideas</strong> &amp; Comprar sin fin <strong>Inspiración</strong> </span>",
   "collection-title-one": "Nuevos tejidos de primavera",
   "collection-description-one": "Nuevos estilos infinitamente versátiles que dicen sí a la primavera. La temporada se ve brillante.",
@@ -156,7 +156,7 @@
   "text-summer-collection": "Colección de verano",
   "text-subscribe-now": "suscríbase ahora",
   "text-newsletter-title": "Y obtenga una oferta en la nueva colección",
-  "text-newsletter-subtitle": "Suscríbase a ChawkBazar para recibir actualizaciones sobre las novedades, ofertas especiales y nuestras promociones",
+  "text-newsletter-subtitle": "Suscríbase a Intelligo para recibir actualizaciones sobre las novedades, ofertas especiales y nuestras promociones",
   "text-collection-list": "Lista de colecciones",
   "text-collections": "Colecciones ",
   "text-accept-cookies": "Aceptar cookies",
