--- a/apps/storefront/public/locales/zh/common.json
+++ b/apps/storefront/public/locales/zh/common.json
@@ -3,7 +3,7 @@
   "error-sub-heading": "我们找不到您要查找的页面",
   "support-heading": "与真实的人交谈",
   "support-sub-heading": "您在栅栏上吗？有一个问题？需要推荐吗？会员服务始终在这里为您提供帮助。向我们发送消息。",
-  "app-heading": "ChawkBazar 应用",
+  "app-heading": "Intelligo 应用",
   "app-sub-heading": "<span>分享您的<strong>想法</ strong> &amp 选购 Endless <strong>灵感</ strong> </ span>",
   "collection-title-one": "春季新款",
   "collection-description-one": "百搭百搭的新样式向春天说是。这个季节看起来很光明。",
@@ -156,7 +156,7 @@
   "text-summer-collection": "夏季收藏",
   "text-subscribe-now": "立即訂閱",
   "text-newsletter-title": "並在新收藏中獲取優惠",
-  "text-newsletter-subtitle": "請訂閱ChawkBazar以接收有關新品，特惠和我們的促銷活動的更新",
+  "text-newsletter-subtitle": "請訂閱Intelligo以接收有關新品，特惠和我們的促銷活動的更新",
   "text-collection-list": "收藏列表",
   "text-collections": "收藏",
   "text-accept-cookies": "接受cookie",
